# test-workspace-dependency

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
