[package]
name = "client"
version = "0.0.1"
authors = ["kaichao"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://whisperd.tech"
repository = "https://github.com/kaichaosun/test-workspace-dependency/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
test-utils = { version = "0.0.1", path = "../test-utils" }
